--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -193,8 +193,7 @@ img {
 
 /*===== HOME =====*/
 .home {
-  position: relative;
-  row-gap: 5rem;
+  row-gap: 1rem;
   padding: 4rem 0 5rem;
 }
 
@@ -212,8 +211,10 @@ img {
 }
 
 .home__social {
+  margin-top: 1.5rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  column-gap: 1rem;
 }
 
 .home__social-icon {
@@ -228,16 +229,14 @@ img {
 }
 
 .home__img {
-  position: absolute;
-  right: 0;
-  top: 10rem;
-  width: 360px;
+  margin: 0 auto;
+  width: 300px;
   border-radius: 0.5rem;
 }
 
 .home__img-user {
-  border-radius: .5rem;
-  width: 330px;
+  border-radius: 0.5rem;
+  width: 100%;
 }
 
 /*BUTTONS*/
@@ -416,7 +415,7 @@ img {
     row-gap: 2rem;
   }
   .home__img {
-    width: 200px;
+    width: 300px;
   }
 }
 
@@ -526,8 +525,9 @@ img {
   }
   .home {
     padding: 10rem 0 2rem;
+    grid-template-columns: repeat(2,1fr);
   }
   .home__img {
-    width: 450px;
+    width: 300px;
   }
 }
